--- a/client/app/provider/tmpl/provider-lookup-result.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-result.tpl.html
@@ -32,12 +32,19 @@
                 <div class="panel-heading">
                     <h3>{{provider | plsName}}&nbsp;<span>[NPI: {{provider.npi}}]</span></h3>
                     <button type="button" class="btn btn-xs btn-primary dark-green"
-                            ng-click="ProviderLookupResultVm.addProvider(provider.npi)">
-                            <i class="fa fa-plus">
-                                <span class="sr-only">Add Provider</span>
-                            </i>
+                            ng-click="ProviderLookupResultVm.addProvider(provider.npi)"
+                            ng-disabled="ProviderLookupResultVm.isProviderAlreadyAdded(provider.npi)">
+                        <i class="fa fa-plus">
+                            <span class="sr-only">Add Provider</span>
+                        </i>
                     </button>
-                    &nbsp;Add this Provider.
+                    <div class="inline" ng-if="!ProviderLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Add
+                        this Provider.
+                    </div>
+                    <div class="inline" ng-if="ProviderLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Provider
+                        already
+                        added.
+                    </div>
                 </div>
                 <div class="panel-body">
                     <p>{{provider.healthcareProviderTaxonomy_1}}</p>
