Change provider menu titles from: "Provider to Providers", "List to List Providers", "Lookup to Search Providers". Change page title from "Provider List to List Providers" and from "Provider Lookup to Search Providers". Change the title of the accordion in the search page to "Search" and "Results"
#7057 - Create manage providers UI that interfaces with Patient Consent Management AP

--- a/client/app/provider/tmpl/provider-lookup-search.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-search.tpl.html
@@ -3,7 +3,7 @@
         <div class="col-sm-12" id="provider_lookup_search">
             <div class="ibox panel panel-darkblue float-e-margins">
                 <div class="ibox-title  modified panel-heading">
-                    <h2>Search by: Provider location</h2>
+                    <h2>Search</h2>
 
                     <div ibox-tools></div>
                 </div>
