--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -1,6 +1,6 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-sm-10">
-        <h1>Provider List</h1>
+        <h1>List Providers </h1>
     </div>
     <div class="col-sm-2">
     </div>
