--- a/client/app/provider/tmpl/provider-lookup-result.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-result.tpl.html
@@ -8,7 +8,7 @@
         <div class="col-md-6" ng-if="!ProviderLookupResultVm.isEmptyResult()">
             <div class="panel panel-darkblue">
                 <div class="ibox-title modified panel-heading">
-                    <h2>Search Results</h2>
+                    <h2>Results</h2>
                 </div>
             </div>
         </div>
