--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -28,13 +28,13 @@
                 <a ui-sref="index.home"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
             </li>
 
-            <!--<li ng-class="{active: $state.includes('consent')}" >-->
-                <!--<a href=""><i class="fa fa-user-md"></i> <span class="nav-label">Consents</span><span class="fa arrow"></span></a>-->
-                <!--<ul class="nav nav-second-level" ng-class="{'in': $state.includes('consent')}">-->
-                    <!--<li ui-sref-active="active"><a ui-sref="consent.list">List</a></li>-->
-                    <!--<li ui-sref-active="active"><a ui-sref="consent.create">Create</a></li>-->
-                <!--</ul>-->
-            <!--</li>-->
+            <li ng-class="{active: $state.includes('consent')}" >
+                <a href=""><i class="fa fa-user-md"></i> <span class="nav-label">Consents</span><span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level" ng-class="{'in': $state.includes('consent')}">
+                    <li ui-sref-active="active"><a ui-sref="consent.list">List Consents</a></li>
+                    <li ui-sref-active="active"><a ui-sref="consent.create">Create Consent</a></li>
+                </ul>
+            </li>
 
             <li ng-class="{active: $state.includes('provider')}" >
                 <a href=""><i class="fa fa-user-md"></i> <span class="nav-label">Providers</span><span class="fa arrow"></span></a>
