Continue implementing select authorize provider for create consent
#7178 - Implement create consent UI

--- a/client/app/consent/tmpl/consent-select-provider.tpl.html
+++ b/client/app/consent/tmpl/consent-select-provider.tpl.html
@@ -1,5 +1,4 @@
 <div>
-    <p ng-transclude></p>
-    <div ng-click="SelectProviderVm.openSelectProviderModal()"> The following individual or organization:</div>
-    <div>Information</div>
+    <div ng-click="SelectProviderVm.openSelectProviderModal()"> {{::SelectProviderVm.fieldplaceholder}}:</div>
+    <div>Data placeholder</div>
 </div>
