--- a/client/app/consent/tmpl/consent-create-edit.tpl.html
+++ b/client/app/consent/tmpl/consent-create-edit.tpl.html
@@ -3,12 +3,12 @@
     <div class="hr-line-dashed"></div>
     <div class="row">
             <div class="col-sm-4">
-                <select-provider>
-                    <input type="hidden" class="form-control" >
+                <select-provider ng-model="CreateConsentVm.consent.authorize" modaltitle="CreateConsentVm.authorize">
                 </select-provider>
             </div>
         <div class="col-sm-4">
-            <input type="text" class="form-control">
+            <select-provider ng-model="CreateConsentVm.consent.disclosure" modaltitle="CreateConsentVm.disclosure" >
+            </select-provider>
         </div>
     </div>
     <div class="hr-line-dashed"></div>
