--- a/client/app/consent/tmpl/consent-select-provider-modal.tpl.html
+++ b/client/app/consent/tmpl/consent-select-provider-modal.tpl.html
@@ -1,6 +1,6 @@
 <div class="inmodal">
     <div class="modal-header">
-        <h4 class="modal-title">Authorize</h4>
+        <h4 class="modal-title">{{::title}}</h4>
     </div>
     <div class="modal-body">
         <p>Authorizing provider?</p>
