--- a/client/app/provider/tmpl/provider-lookup.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup.tpl.html
@@ -1,11 +1,3 @@
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-10">
-        <h1>Search Providers </h1>
-    </div>
-    <div class="col-sm-2">
-    </div>
-</div>
-
-<div class="wrapper wrapper-content animated fadeInRight">
+<content-wrapper title="Search Providers">
     <provider-lookup-search></provider-lookup-search>
-</div>
+</content-wrapper>
