--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -1,12 +1,5 @@
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-10">
-        <h1>List Providers </h1>
-    </div>
-    <div class="col-sm-2">
-    </div>
-</div>
+<content-wrapper title="List Providers">
 
-<div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-sm-12">
             <div class="ibox float-e-margins margin-bottom-10">
@@ -31,44 +24,46 @@
 
                     <table class="table table-bordered table-striped table-hover">
                         <thead>
-                            <tr>
-                                <td></td>
-                                <th>Name/Facility</th>
-                                <th>NPI</th>
-                                <th>Contact Number</th>
-                                <th>Address</th>
-                            </tr>
+                        <tr>
+                            <td></td>
+                            <th>Name/Facility</th>
+                            <th>NPI</th>
+                            <th>Contact Number</th>
+                            <th>Address</th>
+                        </tr>
                         </thead>
                         <tbody>
-                            <tr ng-if="ProviderListVm.providers.length === 0">
-                                <td colspan="5" class="text-center"> No provider has been added.</td>
-                            </tr>
-                            <tr ng-repeat="provider in ProviderListVm.providers">
-                                <td>
-                                    <button type="button" class="btn btn-xs" ng-class="{ 'btn-red' : provider.deletable, 'btn-grey': !provider.deletable} " ng-disabled="!provider.deletable" ng-click="ProviderListVm.openDeleteProviderModal(provider, 'sm')">
-                                        <div class="fa fa-minus">
-                                             <span class="sr-only">delete provider</span>
-                                             <span class="sr-only" ng-bind="provider.lastName"></span>
-                                             <span class="sr-only" ng-bind="provider.firstName"></span>
-                                        </div>
-                                    </button>
-                                </td>
-                                <td>
-                                    <span ng-bind=" provider|pcmProviderNameOrFacility"></span>
-                                </td>
-                                <td> <span ng-bind="provider.npi"></span> </td>
-                                <td> <span ng-bind="provider.practiceLocationAddressTelephoneNumber | phone"></span> </td>
-                                <td>
-                                    {{provider|pcmProviderAddress}}
-                                </td>
-                            </tr>
+                        <tr ng-if="ProviderListVm.providers.length === 0">
+                            <td colspan="5" class="text-center"> No provider has been added.</td>
+                        </tr>
+                        <tr ng-repeat="provider in ProviderListVm.providers">
+                            <td>
+                                <button type="button" class="btn btn-xs"
+                                        ng-class="{ 'btn-red' : provider.deletable, 'btn-grey': !provider.deletable} "
+                                        ng-disabled="!provider.deletable"
+                                        ng-click="ProviderListVm.openDeleteProviderModal(provider, 'sm')">
+                                    <div class="fa fa-minus">
+                                        <span class="sr-only">delete provider</span>
+                                        <span class="sr-only" ng-bind="provider.lastName"></span>
+                                        <span class="sr-only" ng-bind="provider.firstName"></span>
+                                    </div>
+                                </button>
+                            </td>
+                            <td>
+                                <span ng-bind=" provider|pcmProviderNameOrFacility"></span>
+                            </td>
+                            <td><span ng-bind="provider.npi"></span></td>
+                            <td><span ng-bind="provider.practiceLocationAddressTelephoneNumber | phone"></span></td>
+                            <td>
+                                {{provider|pcmProviderAddress}}
+                            </td>
+                        </tr>
                         </tbody>
                     </table>
 
                 </div>
             </div>
         </div>
-
     </div>
 
-</div>
+</content-wrapper>
