--- a/client/app/consent/tmpl/consent-create.tpl.html
+++ b/client/app/consent/tmpl/consent-create.tpl.html
@@ -1,13 +1,4 @@
 
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-10">
-        <h1>Create Consent</h1>
-    </div>
-    <div class="col-sm-2">
-    </div>
-</div>
-
-<div class="wrapper wrapper-content animated fadeInRight">
+<content-wrapper title="Create Consent">
     <create-consent></create-consent>
-</div>
-
+</content-wrapper>
