--- a/client/app/consent/tmpl/consent-list.tpl.html
+++ b/client/app/consent/tmpl/consent-list.tpl.html
@@ -1,12 +1,3 @@
+<content-wrapper title="List Consents">
 
-<div class="row wrapper border-bottom white-bg page-heading">
-    <div class="col-sm-10">
-        <h1>List Consents</h1>
-    </div>
-    <div class="col-sm-2">
-    </div>
-</div>
-
-<div class="wrapper wrapper-content animated fadeInRight">
-
-</div>
+</content-wrapper>
