Add checklist-model module, update the selectProviderDirectives to persist selected provider.
 #7178 - Implement create consent UI

--- a/client/app/consent/tmpl/consent-create-edit.tpl.html
+++ b/client/app/consent/tmpl/consent-create-edit.tpl.html
@@ -1,6 +1,6 @@
 
 <form action="">
-    <h1> I, Dob, hereby authorize... </h1>
+    <h1> I, Bob, hereby authorize... </h1>
     <div class="hr-line-dashed"></div>
     <div class="row">
             <div class="col-sm-4">
