--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -55,7 +55,7 @@
                             <td><span ng-bind="provider.npi"></span></td>
                             <td><span ng-bind="provider.practiceLocationAddressTelephoneNumber | phone"></span></td>
                             <td>
-                                {{provider|pcmProviderAddress}}
+                                <span ng-bind="provider| pcmProviderAddress"></span>
                             </td>
                         </tr>
                         </tbody>
