Add id for content wrapper template
#7175: Implement list consent UI

--- a/client/common/tmpl/content-wrapper.tpl.html
+++ b/client/common/tmpl/content-wrapper.tpl.html
@@ -1,4 +1,4 @@
-<div class="row wrapper border-bottom white-bg page-heading">
+<div class="row wrapper border-bottom white-bg page-heading" id="content_wrapper">
     <div class="col-sm-10">
         <h1><span ng-bind="title"></span></h1>
     </div>
