Add items per page configuration to provider lookup result pagination and refactor provider services
#7175: Implement list consent UI

--- a/client/app/provider/tmpl/provider-lookup-result.tpl.html
+++ b/client/app/provider/tmpl/provider-lookup-result.tpl.html
@@ -17,6 +17,7 @@
         <div class="col-md-6" ng-if="!ProviderLookupResultVm.isEmptyResult()">
             <div class="text-center">
                 <pagination total-items="ProviderLookupResultVm.pagination.totalItems"
+                            items-per-page="ProviderLookupResultVm.pagination.itemsPerPage"
                             ng-model="ProviderLookupResultVm.pagination.currentPage"
                             ng-change="ProviderLookupResultVm.loadPage()"
                             max-size="ProviderLookupResultVm.pagination.maxSize"
@@ -60,6 +61,7 @@
         <div class="col-md-6" ng-if="!ProviderLookupResultVm.isEmptyResult()">
             <div class="text-center">
                 <pagination total-items="ProviderLookupResultVm.pagination.totalItems"
+                            items-per-page="ProviderLookupResultVm.pagination.itemsPerPage"
                             ng-model="ProviderLookupResultVm.pagination.currentPage"
                             ng-change="ProviderLookupResultVm.loadPage()"
                             max-size="ProviderLookupResultVm.pagination.maxSize"
