Add pagination support to consent card list page
#7175: Implement list consent UI

--- a/client/app/consent/tmpl/consent-card-list.tpl.html
+++ b/client/app/consent/tmpl/consent-card-list.tpl.html
@@ -1,5 +1,23 @@
-<div>
-    <div ng-repeat="consent in ConsentCardListVm.consentList">
+<div id="consent_list">
+    <div class="text-center">
+        <pagination total-items="ConsentCardListVm.pagination.totalItems"
+                    items-per-page="ConsentCardListVm.pagination.itemsPerPage"
+                    ng-model="ConsentCardListVm.pagination.currentPage"
+                    ng-change="ConsentCardListVm.loadPage()"
+                    max-size="ConsentCardListVm.pagination.maxSize"
+                    class="pagination-sm"
+                    boundary-links="true"></pagination>
+    </div>
+    <div ng-repeat="consent in ConsentCardListVm.consentList.consents">
         <consent-card consent="consent"/>
+    </div>
+    <div class="text-center">
+        <pagination total-items="ConsentCardListVm.pagination.totalItems"
+                    items-per-page="ConsentCardListVm.pagination.itemsPerPage"
+                    ng-model="ConsentCardListVm.pagination.currentPage"
+                    ng-change="ConsentCardListVm.loadPage()"
+                    max-size="ConsentCardListVm.pagination.maxSize"
+                    class="pagination-sm"
+                    boundary-links="true"></pagination>
     </div>
 </div>
