--- a/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
+++ b/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
@@ -3,7 +3,8 @@
         <h4 class="modal-title">Share for selected purpose only</h4>
     </div>
     <div class="modal-body">
-        <div>Share my information only for specified purposes of use.</div>
+        <div></div>
+        <div class="alert alert-warning"> Share my information <strong>only</strong> for specified purposes of use. </div>
         <button class="btn btn-primary btn-xs" ng-click="selectAll()">Select All</button> <button class="btn btn-primary btn-xs" ng-click="deselectAll()">Deselect All</button>
         <div class="row">
             <div class="col-sm-6">
