--- a/client/app/consent/tmpl/consent-medical-information.tpl.html
+++ b/client/app/consent/tmpl/consent-medical-information.tpl.html
@@ -2,7 +2,7 @@
     <h2> Medical Information</h2>
     <p>Select how you would like to share your medical information.</p>
     <div>
-        <p> <strong>SHARE ALL</strong> information in my medical record.</p>
-        <p> <strong>SHARE</strong> my medical record <strong>WITH EXCEPTION</strong> of specific information.<button type="button" class="btn btn-primary btn-xs" ng-click="MedicalInformationVm.openPrivacySettingsModal()">Edit</button></p>
+        <p> <input type="radio" icheck  ng-model="consent.medicalInformation" value=""  name="medicalInformation" checked> <strong>SHARE ALL</strong> information in my medical record.</p>
+        <p> <input type="radio" icheck  ng-model="consent.medicalInformation" value=""  name="medicalInformation"><strong>SHARE</strong> my medical record <strong>WITH EXCEPTION</strong> of specific information.<button type="button" class="btn btn-primary btn-xs" ng-click="MedicalInformationVm.openPrivacySettingsModal()">Edit</button></p>
     </div>
 </div>
