--- a/client/app/consent/tmpl/consent-purpose-of-use.tpl.html
+++ b/client/app/consent/tmpl/consent-purpose-of-use.tpl.html
@@ -1,7 +1,13 @@
 <div>
-    <h2> Purpose of Use</h2>
-    <p>Choose for what purposes your medical information may be used.</p>
-    <div>
-        <span> <strong>SHARE</strong> my medical record ONLY for the selected purposes of use.</span> <button type="button" class="btn btn-primary btn-xs" ng-click="PurposeOfUseVm.openSelectPurposeModal()">Edit</button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2> Purpose of Use</h2>
+        </div>
+        <div class="panel-body">
+            <p>Choose for what purposes your medical information may be used.</p>
+            <div>
+                <span class="m-r-sm"><strong>SHARE</strong> my medical record ONLY for the selected purposes of use.</span> <button type="button" class="btn btn-primary btn-xs" ng-click="PurposeOfUseVm.openSelectPurposeModal()">Edit</button>
+            </div>
+        </div>
     </div>
 </div>
