--- a/client/app/consent/tmpl/consent-select-provider-modal.tpl.html
+++ b/client/app/consent/tmpl/consent-select-provider-modal.tpl.html
@@ -6,14 +6,14 @@
                 <p ng-if="title === 'Authorize'">Please select <strong>one</strong> individual or organization authorized to share your information:</p>
                 <p ng-if="title === 'Disclosure'">Please select <strong>one</strong> individual or organization for disclosure:</p>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 m-b-xs">
                         <h3>Individuals:</h3>
                         <div ng-repeat="data in providerData">
                                 <div ng-if="isIndividualProvider(data.provider)">
                                     <div class="radio">
                                         <label>
                                                 <input type="checkbox" icheck  checklist-model="consent.selectedProviders" checklist-value="data.provider.npi"  ng-checked="data.isDisabled">
-                                                <span ng-bind=" data.provider|pcmProviderNameOrFacility"></span>
+                                                <span class="m-l-xs" ng-bind=" data.provider|pcmProviderNameOrFacility"></span>
                                         </label>
 
                                     </div>
@@ -22,21 +22,21 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-6 m-b-md">
                         <h3>Organization:</h3>
                         <div ng-repeat="data in providerData">
                             <div ng-if="isOrganizationProvider(data.provider)">
                                 <div class="radio">
                                     <label>
                                         <input type="checkbox" icheck  checklist-model="consent.selectedProviders" checklist-value="data.provider.npi" ng-checked="data.isDisabled">
-                                        <span ng-bind=" data.provider|pcmProviderNameOrFacility"></span>
+                                        <span class="m-l-xs" ng-bind=" data.provider|pcmProviderNameOrFacility"></span>
                                     </label>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-        </form>
+    </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white" ng-click="cancel()">Cancel</button>
         <button type="button" class="btn btn-primary" ng-click="ok()">Add Selected</button>
