--- a/client/app/consent/tmpl/consent-select-provider.tpl.html
+++ b/client/app/consent/tmpl/consent-select-provider.tpl.html
@@ -1,4 +1,8 @@
-<div>
-    <div ng-click="SelectProviderVm.openSelectProviderModal()"> {{::SelectProviderVm.fieldplaceholder}}:</div>
-    <div>Data placeholder</div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <div ng-click="SelectProviderVm.openSelectProviderModal()"> {{::SelectProviderVm.fieldplaceholder}}:</div>
+    </div>
+    <div class="panel-body">
+        <div class="m-l"><span class="fa fa-user info-blue m-r-xs m-b-xs"></span>Van Dongen, Monica</div>
+    </div>
 </div>
