--- a/client/app/consent/tmpl/consent-term.tpl.html
+++ b/client/app/consent/tmpl/consent-term.tpl.html
@@ -1,7 +1,11 @@
 <div>
-    <h2> Consent Term</h2>
-    <p>Enter a start and end date during wich your medical records will be shared.</p>
-    <div>
-         <span> Consent Start </span>  <span> Consent End </span>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2> Consent Term</h2>
+        </div>
+        <div class="panel-body">
+            <p>Enter a start and end date during wich your medical records will be shared.</p>
+            <div><span> Consent Start </span>  <span> Consent End </span></div>
+        </div>
     </div>
 </div>
